Ajout de la modification de couleur pour le menu

--- a/KiPong/KiPong/KiPong.csproj
+++ b/KiPong/KiPong/KiPong.csproj
@@ -113,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AIBat.cs" />
+    <Compile Include="ColorManager.cs" />
     <Compile Include="Helpable.cs" />
     <Compile Include="Ball.cs" />
     <Compile Include="Bat.cs" />
